[package]
name = "hey-bert"
authors = ["Bryan Maynard <bsgbryan@gmail.com>"]
description = "A WebSocket server interface to rust_bert"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
flume = "0.11.1"
futures = "0.3.31"
futures-util = "0.3.31"
rust-bert = "0.23.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
